--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "description": "Argument parser minus the dashes",
   "main": "index.js",
+  "engines": {
+    "node": ">12.0"
+  },
   "scripts": {
     "test": "node test/test.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rakusan2/dashless-args.git"
   },
   "keywords": [
     "Arguments",
@@ -13,6 +20,10 @@
   ],
   "author": "Tomas Rakusan",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/rakusan2/dashless-args/issues"
+  },
+  "homepage": "https://github.com/rakusan2/dashless-args#readme",
   "devDependencies": {
     "@types/node": "~16.11.6",
     "typescript": "~4.4.4"
