--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dl-args",
   "version": "1.0.1",
   "description": "Argument parser minus the dashes",
-  "main": "index.js",
+  "main": "src/index.js",
   "engines": {
     "node": ">12.0"
   },
